# studious-tribble

./: CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Logger.cpp  Logger.h  Mouse.cpp  Mouse.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transformation.h  TribLog.h  main.cpp
res/shaders/: Fragment.fs  SimpleShader.fs  Vertex.vs
